<resources>
    <string name="com.crashlytics.android.build_id">045b19f1-a092-4bc6-bc5e-5596f175d042</string>
    <string name="action_all">查看全部</string>
    <string name="action_allow_conversation">允许私聊</string>
    <string name="action_ask_friends">提问</string>
    <string name="action_associated_save">保存</string>
    <string name="action_banned_rule">禁言规则</string>
    <string name="action_bar_toast_message_enable_nearyby">附近的人开启成功，可以接收附近的消息了！</string>
    <string name="action_block_conversation">屏蔽私聊</string>
    <string name="action_block_message">不再接收新消息</string>
    <string name="action_chat">私聊</string>
    <string name="action_clear">清空</string>
    <string name="action_create_group_chat">发起群聊</string>
    <string name="action_delete">删除</string>
    <string name="action_done">完成</string>
    <string name="action_female">只看女生</string>
    <string name="action_info">关于</string>
    <string name="action_male">只看男生</string>
    <string name="action_more">更多</string>
    <string name="action_publish_secret">发表新秘密</string>
    <string name="action_read_all">全部已读</string>
    <string name="action_save">保存</string>
    <string name="action_send">提交</string>
    <string name="action_send_anonymous_letter">发送</string>
    <string name="action_share_promotion">分享活动</string>
    <string name="action_submit">提交</string>
    <string name="add_crowd_failed">提交圈子建议失败</string>
    <string name="add_crowd_hint">你觉得还有哪些圈子值得收录？</string>
    <string name="add_crowd_notice">公司/学校类型的圈子请勿在此页面提交</string>
    <string name="add_crowd_reason_hint">简要说明一下理由</string>
    <string name="add_crowd_success">提交圈子成功</string>
    <string name="add_friend_success">已成功添加对方为朋友</string>
    <string name="add_user_info">添加头像和昵称</string>
    <string name="all_org_desc">"我们已收录%1$s个公司，%2$s所学校, 设置公司/学校后，
即可和同事/同学匿名互动"</string>
    <string name="anonymous_comment">匿名评论</string>
    <string name="anonymous_group_member">匿名成员</string>
    <string name="anonymous_group_owner">匿名群主</string>
    <string name="anonymous_letter_message_notice">若对方未注册，将通过无秘的短信通知对方</string>
    <string name="app_downloading">正在下载更新,请稍后</string>
    <string name="app_name">无秘</string>
    <string name="app_update">应用更新</string>
    <string name="appeal_validation_hint">人工认证你属于</string>
    <string name="associate_button_text">一键关联微信号</string>
    <string name="associate_name_text">你的名字</string>
    <string name="associate_weixin_notice_message_associate">关联微信号后即可实名提问</string>
    <string name="associate_weixin_notice_message_real_name">"使用真实名字朋友才会回复你
名字保存后将不能修改"</string>
    <string name="associate_weixin_unavailable">微信客户端不可用</string>
    <string name="at">\@</string>
    <string name="avatar">头像</string>
    <string name="banned_by_reports">因本群多人举报，%1$s已被自动禁言</string>
    <string name="banned_rule_dialog_message">用户在24小时内被3名群成员举报就会被自动禁言。</string>
    <string name="banned_rule_dialog_title">禁言规则</string>
    <string name="beginner_post_guidance_content">你有什么不想在朋友圈说的话，在这里放心说吧，全是匿名哦！</string>
    <string name="beginner_post_guidance_dialog_content_hint">匿名回答</string>
    <string name="beginner_post_guidance_dialog_next_step_btn">下一步</string>
    <string name="beginner_post_guidance_dialog_sub_title">你朋友会看到但不知道是你</string>
    <string name="beginner_post_guidance_dialog_switch_question_btn">"换个
问题"</string>
    <string name="beginner_post_guidance_dialog_title">写下你的第一条秘密</string>
    <string name="beginner_post_guidance_done">恭喜你完成了第一条秘密，快发表吧！</string>
    <string name="block">屏蔽此人</string>
    <string name="block_dialog_message">屏蔽后，我们将减少展示他发表的秘密，你可以在设置页面取消屏蔽</string>
    <string name="block_dialog_title">屏蔽此人的秘密</string>
    <string name="blocked_user_empty">还没有屏蔽任何秘密的楼主</string>
    <string name="blocked_user_info_dialog_message">在朋友圈看到比较反感或特别不感兴趣的秘密时，可以对秘密的楼主进行屏蔽。</string>
    <string name="btn_group_chat_empty_create_group_chat">创建群聊</string>
    <string name="btn_group_chat_empty_hint_set_org">设置我的公司/学校</string>
    <string name="btn_manage_my_circle">发现更多圈子</string>
    <string name="btn_my_group_chat">我的</string>
    <string name="btn_search_contact_friend">查找通讯录中的朋友</string>
    <string name="button_nearby">去附近逛逛</string>
    <string name="button_text_approve">同意</string>
    <string name="button_text_kick_out">踢出本群</string>
    <string name="button_text_reject">拒绝</string>
    <string name="button_text_send">发送</string>
    <string name="button_text_unbanned">解除禁言</string>
    <string name="call_member_chat_tips">%1$s个成员现身了</string>
    <string name="call_member_dialog_input">输入话题...</string>
    <string name="call_member_dialog_title">召集所有成员上线讨论话题，每天只能使用一次</string>
    <string name="call_member_promot_notify_content">「%1$s」群主召集所有成员上线</string>
    <string name="call_member_prompt_desc">群主召集所有成员上线讨论</string>
    <string name="call_member_prompt_enter_group_chat">进入群聊</string>
    <string name="call_member_prompt_reject">拒绝</string>
    <string name="cancel">取消</string>
    <string name="card_circle_locked_hint">解锁需%1$s个成员加入</string>
    <string name="card_circle_locked_info">"%1$s圈子
秘密已锁定"</string>
    <string name="card_circle_locked_invite_button">邀请同学加入</string>
    <string name="card_circle_locked_join_button">加入圈子</string>
    <string name="card_circle_locked_joined_button">邀请%1$s加入</string>
    <string name="card_circle_locked_joined_info">"%1$s
%2$s个秘密已锁定"</string>
    <string name="card_circle_locked_unlock">解锁需10个成员加入</string>
    <string name="card_circle_locked_unlock_requirement">%1$s/10</string>
    <string name="card_circle_locked_unlock_satisfied">已满足十个成员条件，管理员审核后将立即解锁</string>
    <string name="card_guidance_button_anonymous_publish">匿名发表秘密</string>
    <string name="card_guidance_button_invite_friend">让朋友来回答</string>
    <string name="card_guidance_title">「无秘」提了一个问题</string>
    <string name="card_secret_unauthorized_button_repair">点击修复</string>
    <string name="card_secret_unauthorized_button_repairing">正在重试访问通讯录</string>
    <string name="card_share_small_circle_content">已有%1$s个朋友</string>
    <string name="card_small_circle_content">%1$s个来自你朋友的秘密已锁定</string>
    <string name="card_small_circle_unlock">解锁</string>
    <string name="card_small_circle_unlock_dialog_message">为避免被猜出来是谁发的秘密，当有3个朋友进来玩就会立即解锁。</string>
    <string name="card_small_circle_unlock_shared_dialog_message">已发送邀请！为避免被猜出来是谁发的秘密，当有3个朋友进来玩就会立即解锁。</string>
    <string name="categories_empty_header">%1$s暂时没有相关圈子</string>
    <string name="categories_header">%1$s的成员可以加入以下相关圈子</string>
    <string name="change_password_edit_hint_confirm_new_password">再次确认新密码</string>
    <string name="change_password_edit_hint_current_password">当前密码</string>
    <string name="change_password_edit_hint_new_password">新密码</string>
    <string name="change_question">随机选</string>
    <string name="chat_blocked_by_converser">对方已屏蔽私聊</string>
    <string name="chat_blocked_by_login_user">你已屏蔽私聊</string>
    <string name="chat_detail_destoy">对话消息已被销毁</string>
    <string name="chat_detail_start">私聊</string>
    <string name="chat_empty">还没有聊天记录</string>
    <string name="chat_info_from_anonymous_letter">来自匿名信</string>
    <string name="chat_info_from_friend_impression">来自朋友印象</string>
    <string name="chat_info_from_friend_reg">来自新朋友通知</string>
    <string name="chat_info_from_group_chat">来自群聊：%1$s</string>
    <string name="chat_info_from_nearby">来自附近的人：%1$s</string>
    <string name="chat_info_from_nearby_aggregate">来自附近的人</string>
    <string name="chat_info_from_secret_invitation">来自秘密的@提醒</string>
    <string name="chat_info_title_nearby">附近的敲门</string>
    <string name="chat_laoding">正在获取聊天列表...</string>
    <string name="chat_message_preview_group_chat">有人分享了一个[群聊]</string>
    <string name="chat_message_preview_image">[图片]</string>
    <string name="chat_message_preview_new_type">新消息，升级App查看</string>
    <string name="chat_message_preview_secret">有人分享了一条[秘密]</string>
    <string name="chat_message_preview_voice">[语音]</string>
    <string name="chat_message_sys_retracted_text1">经多人举报，</string>
    <string name="chat_message_sys_retracted_text2">的一条消息被系统撤回</string>
    <string name="chat_more_unread_message_bar_text">%1$s条未读信息，点击查看</string>
    <string name="chat_more_unread_message_bar_text1">未读消息较多，点击查看最近100条</string>
    <string name="chat_share_group_chat_message_item_title">邀请你加入群聊「%1$s」</string>
    <string name="chat_unread_message_divider_text">以下是未读消息</string>
    <string name="chat_unsupported">对方版本较旧，待其升级后即可查看聊天</string>
    <string name="chat_waiting_for_reply">等待对方查看</string>
    <string name="check_update_failed">检查更新失败，请稍候再试</string>
    <string name="checkbox_label_auto_remove">自动销毁</string>
    <string name="circle_category_advice">若你有更好的圈子建议，请提交给我们。</string>
    <string name="create_group_chat_permission_allowed">所有人都可加入</string>
    <string name="create_group_chat_permission_hint">群聊发起后，不允许修改加入权限</string>
    <string name="create_group_chat_permission_limited">仅限%1$s的人加入</string>
    <string name="create_group_chat_validation">加群验证</string>
    <string name="create_group_chat_validation_hint">打开后，新成员只有通过群主审核才能加入</string>
    <string name="group_chat_info_dismiss">解散群聊</string>
    <string name="group_chat_info_item_block">屏蔽来自此群聊的所有人</string>
    <string name="group_chat_info_item_impact">影响力</string>
    <string name="group_chat_info_item_invite">邀请朋友</string>
    <string name="group_chat_info_item_notification">新消息通知</string>
    <string name="group_chat_info_item_owner">成员管理</string>
    <string name="group_chat_info_item_permission">加入权限</string>
    <string name="group_chat_info_memeber_tip">消息发出一天后将自动销毁</string>
    <string name="guess_org_info_btn_no">不是</string>
    <string name="guess_org_info_btn_yes">是的</string>
    <string name="guess_org_info_loading">正在猜测你所在的公司或者学校.....</string>
    <string name="hint_notify_chat">设置收到聊天新消息时，是否需要提示声和振动</string>
    <string name="hint_notify_chat_disturb">免打扰时段内，将不会有声音和振动</string>
    <string name="hint_notify_on_bar">若关闭，当收到新消息时，通知将不显示消息内容</string>
    <string name="hint_notify_secret">设置有秘密新动态时，是否需要新消息通知</string>
    <string name="publish_bottom_pan_album">相册</string>
    <string name="publish_bottom_pan_camera">拍照</string>
    <string name="publish_bottom_pan_search">网络图库</string>
    <string name="set_org_info_hint">请提供您现在所处的公司或者学校，方便定位到最相关的秘密。</string>
    <string name="settings_title_blocked_user">不看他们的秘密</string>
    <string name="settings_title_change_password">修改密码</string>
    <string name="settings_title_change_phone_number">修改手机号</string>
    <string name="settings_title_chat_disturb">设定免打扰时段</string>
    <string name="settings_title_chat_disturb_from">从</string>
    <string name="settings_title_chat_disturb_to">到</string>
    <string name="settings_title_chat_sound">声音</string>
    <string name="settings_title_chat_vibration">振动</string>
    <string name="settings_title_check_update">检查更新</string>
    <string name="settings_title_circle_secret_created">朋友圈发表了新秘密</string>
    <string name="settings_title_enable_push_notification">接收通知提醒</string>
    <string name="settings_title_feedback">意见反馈</string>
    <string name="settings_title_logout">退出登录</string>
    <string name="settings_title_notify_on_bar">通知显示消息详情</string>
    <string name="settings_title_organization_secret_created">同事/同学发表了新秘密</string>
    <string name="settings_title_other_circle_secret_created">其他圈子发表了新秘密</string>
    <string name="settings_title_privacy">隐私</string>
    <string name="settings_title_secret_updated">关注过的秘密被评论</string>
    <string name="single_chat_info_item_add_friend">添加更多朋友</string>
    <string name="single_chat_info_item_block_other">屏蔽对方</string>
    <string name="single_chat_info_item_from_new_friend">来自新朋友通知</string>
    <string name="single_chat_info_item_from_new_friend_summary">当有新朋友加入时，无秘会自动通知他的朋友，你还可以邀请更多朋友。</string>
    <string name="single_chat_info_item_remark">备注</string>
    <string name="single_chat_info_item_report">举报</string>
    <string name="single_chat_info_tip_for_nearby_chat">当双方都没有新回复时，对话消息将自动销毁</string>
</resources>