<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/gray_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:wumii="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/section_space" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.wumii.android.mimi.ui.widgets.SectionView android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.wumii.android.mimi.ui.widgets.SectionListView android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.wumii.android.mimi.ui.widgets.SectionCheckBoxItemView android:id="@id/enable_push_notification" android:layout_width="wrap_content" android:layout_height="wrap_content" wumii:siName="@string/settings_title_enable_push_notification" />
            </com.wumii.android.mimi.ui.widgets.SectionListView>
        </com.wumii.android.mimi.ui.widgets.SectionView>
        <com.wumii.android.mimi.ui.widgets.SectionView android:id="@id/chat_section" android:layout_width="fill_parent" android:layout_height="wrap_content" wumii:footerText="@string/hint_notify_chat">
            <com.wumii.android.mimi.ui.widgets.SectionListView android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.wumii.android.mimi.ui.widgets.SectionCheckBoxItemView android:id="@id/chat_sound" android:layout_width="wrap_content" android:layout_height="wrap_content" wumii:siName="@string/settings_title_chat_sound" />
                <com.wumii.android.mimi.ui.widgets.SectionCheckBoxItemView android:id="@id/chat_vibration" android:layout_width="wrap_content" android:layout_height="wrap_content" wumii:siName="@string/settings_title_chat_vibration" />
            </com.wumii.android.mimi.ui.widgets.SectionListView>
        </com.wumii.android.mimi.ui.widgets.SectionView>
        <com.wumii.android.mimi.ui.widgets.SectionView android:id="@id/chat_disturb_section" android:layout_width="fill_parent" android:layout_height="wrap_content" wumii:footerText="@string/hint_notify_chat_disturb">
            <com.wumii.android.mimi.ui.widgets.SectionListView android:id="@id/chat_disturb_list" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.wumii.android.mimi.ui.widgets.SectionCheckBoxItemView android:id="@id/chat_disturb" android:layout_width="wrap_content" android:layout_height="wrap_content" wumii:siName="@string/settings_title_chat_disturb" />
                <com.wumii.android.mimi.ui.widgets.SectionTextItemView android:id="@id/chat_disturb_from" android:layout_width="wrap_content" android:layout_height="wrap_content" wumii:siName="@string/settings_title_chat_disturb_from" />
                <com.wumii.android.mimi.ui.widgets.SectionTextItemView android:id="@id/chat_disturb_to" android:layout_width="wrap_content" android:layout_height="wrap_content" wumii:siName="@string/settings_title_chat_disturb_to" />
            </com.wumii.android.mimi.ui.widgets.SectionListView>
        </com.wumii.android.mimi.ui.widgets.SectionView>
        <com.wumii.android.mimi.ui.widgets.SectionView android:id="@id/secret_section" android:layout_width="fill_parent" android:layout_height="wrap_content" wumii:footerText="@string/hint_notify_secret">
            <com.wumii.android.mimi.ui.widgets.SectionListView android:layout_width="fill_parent" android:layout_height="fill_parent">
                <com.wumii.android.mimi.ui.widgets.SectionCheckBoxItemView android:id="@id/secret_updated" android:layout_width="wrap_content" android:layout_height="wrap_content" wumii:siName="@string/settings_title_secret_updated" />
                <com.wumii.android.mimi.ui.widgets.SectionCheckBoxItemView android:id="@id/circle_secret_created" android:layout_width="wrap_content" android:layout_height="wrap_content" wumii:siName="@string/settings_title_circle_secret_created" />
                <com.wumii.android.mimi.ui.widgets.SectionCheckBoxItemView android:id="@id/organization_secret_created" android:layout_width="wrap_content" android:layout_height="wrap_content" wumii:siName="@string/settings_title_organization_secret_created" />
                <com.wumii.android.mimi.ui.widgets.SectionCheckBoxItemView android:id="@id/other_circle_secret_created" android:layout_width="wrap_content" android:layout_height="wrap_content" wumii:siName="@string/settings_title_other_circle_secret_created" />
            </com.wumii.android.mimi.ui.widgets.SectionListView>
        </com.wumii.android.mimi.ui.widgets.SectionView>
        <com.wumii.android.mimi.ui.widgets.SectionView android:id="@id/notify_section" android:layout_width="fill_parent" android:layout_height="wrap_content" wumii:footerText="@string/hint_notify_on_bar">
            <com.wumii.android.mimi.ui.widgets.SectionListView android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.wumii.android.mimi.ui.widgets.SectionCheckBoxItemView android:id="@id/notify_on_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" wumii:siName="@string/settings_title_notify_on_bar" />
            </com.wumii.android.mimi.ui.widgets.SectionListView>
        </com.wumii.android.mimi.ui.widgets.SectionView>
    </LinearLayout>
</ScrollView>