<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/gray_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:wumii="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.wumii.android.mimi.ui.widgets.chat.GroupChatInfoHeader android:id="@id/header" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <com.wumii.android.mimi.ui.widgets.chat.ChatInfoItemSummaryView android:id="@id/permission" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/section_space" wumii:ciiTitle="@string/group_chat_info_item_permission" wumii:ciiTitleTextColor="@color/group_chat_info_item_title_text" />
        <com.wumii.android.mimi.ui.widgets.chat.ChatInfoItemSummaryView android:id="@id/member" android:layout_width="fill_parent" android:layout_height="wrap_content" wumii:ciiTitle="@string/group_chat_info_item_owner" wumii:ciiTitleTextColor="@color/group_chat_info_item_title_text" wumii:ciiMatchBottomLine="true" />
        <com.wumii.android.mimi.ui.widgets.chat.ChatInfoItemImpactView android:id="@id/impact" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/section_space" wumii:ciiTitle="@string/group_chat_info_item_impact" wumii:ciiTitleTextColor="@color/group_chat_info_item_title_text" wumii:ciiMatchBottomLine="true" />
        <com.wumii.android.mimi.ui.widgets.chat.ChatInfoItemCheckBox android:id="@id/notify" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/section_space" wumii:onClick="clickOnToggleNotification" wumii:ciiTitle="@string/group_chat_info_item_notification" />
        <com.wumii.android.mimi.ui.widgets.chat.ChatInfoItemTitleView android:id="@id/invite" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="clickOnInvite" wumii:ciiBackground="@drawable/item_background_holo_light" wumii:ciiTitle="@string/group_chat_info_item_invite" />
        <com.wumii.android.mimi.ui.widgets.chat.ChatInfoItemCheckBox android:id="@id/block" android:layout_width="fill_parent" android:layout_height="wrap_content" wumii:onClick="clickOnBlock" wumii:ciiTitle="@string/group_chat_info_item_block" wumii:ciiMatchBottomLine="true" />
        <TextView android:textColor="@android:color/darker_gray" android:padding="@dimen/chat_info_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/group_chat_info_memeber_tip" />
        <Button android:textSize="18.0dip" android:textColor="@android:color/white" android:background="@drawable/red_button_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/chat_info_item_padding" android:layout_marginTop="5.0dip" android:layout_marginRight="@dimen/chat_info_item_padding" android:layout_marginBottom="20.0dip" android:text="@string/group_chat_info_dismiss" android:onClick="clickOnDismissed" />
    </LinearLayout>
</ScrollView>