<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/create_group_permission_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:wumii="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.wumii.android.mimi.ui.widgets.SectionView android:layout_width="fill_parent" android:layout_height="wrap_content" wumii:footerText="@string/create_group_chat_permission_hint">
            <com.wumii.android.mimi.ui.widgets.SectionRadioGroupView android:id="@id/create_group_chat_permission_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.wumii.android.mimi.ui.widgets.SectionRadioItemView android:id="@id/create_group_chat_permission_limited" android:layout_width="wrap_content" android:layout_height="wrap_content" wumii:siName="@string/create_group_chat_permission_limited" />
                <com.wumii.android.mimi.ui.widgets.SectionRadioItemView android:id="@id/create_group_chat_permission_allowed" android:layout_width="wrap_content" android:layout_height="wrap_content" wumii:siName="@string/create_group_chat_permission_allowed" />
            </com.wumii.android.mimi.ui.widgets.SectionRadioGroupView>
        </com.wumii.android.mimi.ui.widgets.SectionView>
        <com.wumii.android.mimi.ui.widgets.SectionView android:layout_width="fill_parent" android:layout_height="wrap_content" wumii:footerText="@string/create_group_chat_validation_hint">
            <com.wumii.android.mimi.ui.widgets.SectionListView android:id="@id/create_group_chat_validation_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.wumii.android.mimi.ui.widgets.SectionCheckBoxItemView android:id="@id/create_group_chat_validation" android:layout_width="wrap_content" android:layout_height="wrap_content" wumii:siName="@string/create_group_chat_validation" />
                <com.wumii.android.mimi.ui.widgets.SectionCustomView android:id="@id/create_group_chat_validation_question" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </com.wumii.android.mimi.ui.widgets.SectionListView>
        </com.wumii.android.mimi.ui.widgets.SectionView>
    </LinearLayout>
</ScrollView>