<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0dip" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/beginner_post_guidance_dialog_title" />
    <TextView android:textSize="14.0dip" android:textColor="#ff8c8c8c" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="6.0dip" android:text="@string/beginner_post_guidance_dialog_sub_title" />
    <LinearLayout android:background="@drawable/beginner_post_secret_dialog_input_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:textSize="17.0dip" android:layout_gravity="center_vertical" android:id="@id/question" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:lines="2" android:layout_weight="1.0" />
        <View android:background="@android:color/darker_gray" android:layout_width="1.0px" android:layout_height="fill_parent" />
        <Button android:textSize="15.0dip" android:textColor="#ff3ebd9f" android:id="@id/swich_question" android:background="@drawable/switch_question_btn_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/beginner_post_guidance_dialog_switch_question_btn" />
    </LinearLayout>
    <EditText android:textSize="17.0dip" android:gravity="top" android:id="@id/comment" android:background="@drawable/beginner_post_secret_dialog_input_border" android:padding="10.0dip" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:hint="@string/beginner_post_guidance_dialog_content_hint" android:lines="4" android:inputType="textMultiLine" />
    <Button android:enabled="false" android:textColor="@android:color/white" android:id="@id/next_step" android:background="@drawable/green_btn_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/beginner_post_guidance_dialog_next_step_btn" />
</LinearLayout>