<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/gray_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@android:color/darker_gray" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_org_info_hint" />
    <TextView android:textSize="16.0sp" android:textColor="#ffff8700" android:id="@id/guess" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/guess_org_info_loading" />
    <LinearLayout android:orientation="vertical" android:id="@id/guess_button_layout" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="16.0sp" android:id="@id/guess_org_info_btn_yes" android:background="@drawable/item_background_holo_light_white_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/guess_org_info_btn_yes" />
        <View android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="10.0dip" />
        <TextView android:textSize="16.0sp" android:id="@id/guess_org_info_btn_no" android:background="@drawable/item_background_holo_light_white_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/guess_org_info_btn_no" />
        <View android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
    </LinearLayout>
</LinearLayout>